--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,10 @@ jobs:
       with:
         go-version: '1.17.4'
     - run: env GOOS=darwin GOARCH=amd64 go build
-    - run: upx oidc-cli
+    - name: Compress binaries
+      uses: svenstaro/upx-action@v2
+      with:
+        file: oidc-cli
     - run: mv oidc-cli oidc-cli_darwin_amd64
     - name: Release
       uses: softprops/action-gh-release@v1
